--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ZENTRA — RiskLens Investor Demo (TR/EN)</title>
-  <meta name="description" content="Zentra builds scalable intelligence infrastructure. RiskLens is the flagship transaction risk intelligence engine for financial institutions." />
+  <meta name="description" content="Zentra builds scalable intelligence infrastructure. RiskLens is the flagship transaction risk intelligence engine." />
 
   <style>
     :root{
@@ -43,7 +43,7 @@
       backdrop-filter: blur(10px);
       border-bottom:1px solid var(--line);
     }
-    .brandline{display:flex; align-items:center; gap:10px; min-width: 0;}
+    .brandline{display:flex; align-items:center; gap:10px; min-width: 0; flex-wrap:wrap}
     .zentraLogo{
       height:32px; width:auto;
       filter: drop-shadow(0 6px 18px rgba(120,166,255,.18));
@@ -79,6 +79,7 @@
       border-color: rgba(76,224,154,.35);
       background: rgba(76,224,154,.10);
     }
+
     .grid{
       display:grid;
       grid-template-columns: 1.2fr .8fr;
@@ -144,6 +145,7 @@
     .muted{color:var(--muted)}
     ul{margin:10px 0 0 18px; padding:0}
     li{margin:6px 0}
+
     .riskWrap{display:grid; gap:12px; grid-template-columns: 1fr 1fr;}
     @media (max-width: 820px){ .riskWrap{grid-template-columns:1fr;} }
     .riskBox{
@@ -169,6 +171,7 @@
     .kv{display:grid; grid-template-columns: 1fr; gap:8px;}
     .kv .row{display:flex; gap:10px; flex-wrap:wrap; color:var(--muted); font-size:13px;}
     .kv b{color:var(--text)}
+
     .pdfFrame{
       width:100%;
       height: 820px;
@@ -177,13 +180,8 @@
       overflow:hidden;
       background: rgba(0,0,0,.18);
     }
-    @media (max-width: 520px){
-      .pdfFrame{height: 680px;}
-    }
-    .logoMark{
-      height:28px; width:auto; opacity:.95;
-      filter: drop-shadow(0 6px 18px rgba(76,224,154,.12));
-    }
+    @media (max-width: 520px){ .pdfFrame{height: 680px;} }
+
     .foot{
       margin-top:18px;
       padding:14px;
@@ -193,7 +191,19 @@
       color: var(--muted);
       font-size:12px;
     }
+
+    /* Language helper */
     .langhide{display:none !important;}
+
+    /* Small inline icon */
+    .lensIcon{
+      display:inline-flex; align-items:center; justify-content:center;
+      width:28px; height:28px;
+      border-radius:10px;
+      border:1px solid var(--line);
+      background: rgba(255,255,255,.03);
+    }
+    .lensIcon svg{width:18px; height:18px; opacity:.95}
   </style>
 </head>
 
@@ -201,8 +211,9 @@
   <!-- Top bar -->
   <div class="topbar">
     <div class="brandline" title="ZENTRA">
-      <!-- ZENTRA wordmark (base64) -->
-      <img class="zentraLogo" alt="Zentra logo" src="data:image/png;base64,{{ZENTRA_LOGO_BASE64}}" />
+      <!-- ZENTRA wordmark (embedded) -->
+      <img class="zentraLogo" alt="Zentra logo" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." />
+      <!-- IMPORTANT: If the logo appears broken, re-commit once; GitHub sometimes caches. -->
       <span class="pill">ONE-FILE Investor Demo • TR/EN</span>
       <span class="pill">Contact: <a href="mailto:42mehmetaltas@gmail.com">42mehmetaltas@gmail.com</a></span>
     </div>
@@ -211,10 +222,13 @@
       <button class="btn" id="btnEN" aria-label="Switch to English">EN</button>
       <button class="btn" id="btnTR" aria-label="Türkçe'ye geç">TR</button>
 
-      <a class="btn primary" id="openPdfBtn" target="_blank" rel="noopener" href="https://drive.google.com/file/d/1r3UR9HOM-dFqhRztARx_G23vAh0TAXh3/view">
+      <a class="btn primary" target="_blank" rel="noopener"
+         href="https://drive.google.com/file/d/1r3UR9HOM-dFqhRztARx_G23vAh0TAXh3/view">
         Open PDF
       </a>
-      <a class="btn good" target="_blank" rel="noopener" href="mailto:42mehmetaltas@gmail.com?subject=Zentra%20%2F%20RiskLens%20Investor%20Interest&body=Hello%2C%0A%0AI%20reviewed%20the%20Zentra%20RiskLens%20demo%20and%20would%20like%20to%20connect.%0A%0AName%3A%0AFund%2FCompany%3A%0A">
+
+      <a class="btn good" target="_blank" rel="noopener"
+         href="mailto:42mehmetaltas@gmail.com?subject=Zentra%20%2F%20RiskLens%20Investor%20Interest&body=Hello%2C%0A%0AI%20reviewed%20the%20Zentra%20RiskLens%20demo%20and%20would%20like%20to%20connect.%0A%0AName%3A%0AFund%2FCompany%3A%0A">
         Email
       </a>
     </div>
@@ -244,8 +258,14 @@
             </div>
           </div>
 
-          <!-- RiskLens mark/icon (base64) -->
-          <img class="logoMark" alt="RiskLens mark" src="data:image/png;base64,{{RISK_MARK_BASE64}}" />
+          <div class="lensIcon" title="RiskLens">
+            <!-- Lightweight lens icon (no heavy image) -->
+            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <path d="M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="rgba(120,166,255,.95)" stroke-width="1.8"/>
+              <path d="M16.2 16.2 21 21" stroke="rgba(76,224,154,.90)" stroke-width="1.8" stroke-linecap="round"/>
+              <path d="M7.8 10.6c.5-1.8 2.1-3.1 4-3.1" stroke="rgba(255,255,255,.45)" stroke-width="1.6" stroke-linecap="round"/>
+            </svg>
+          </div>
         </div>
 
         <div class="bd">
@@ -267,22 +287,22 @@
           <div class="hr"></div>
 
           <p data-lang="en">
-            <b>RiskLens</b> detects invoice fraud, produces real-time risk scores, and becomes core infrastructure used by
-            banks, fintech platforms, SME finance institutions, factoring firms, and Islamic (participation) banks.
+            <b>RiskLens</b> detects invoice fraud, produces real-time risk scores, and supports financial institutions through
+            <b>licensing</b>, <b>API usage</b>, and <b>certification</b>.
             <b>RiskLens does NOT lend money</b>, does not finance transactions, and does not charge interest — it is a
             decision-support intelligence layer.
           </p>
           <p class="langhide" data-lang="tr">
-            <b>RiskLens</b>; fatura sahteciliğini tespit eder, gerçek zamanlı risk skoru üretir ve bankalar, fintech platformları,
-            KOBİ finans kurumları, faktoring şirketleri ve katılım bankaları tarafından kullanılan çekirdek altyapı olmayı hedefler.
+            <b>RiskLens</b>; fatura sahteciliğini tespit eder, gerçek zamanlı risk skoru üretir ve finans kurumlarını
+            <b>lisans</b>, <b>API kullanım</b> ve <b>sertifikasyon</b> modeliyle destekler.
             <b>RiskLens kredi vermez</b>, finansman sağlamaz, faiz üretmez — sadece karar destek zekâ katmanı sunar.
           </p>
 
           <p class="muted" data-lang="en">
-            Killer line: Infrastructure companies win. Integrated once, paid forever (recurring licensing + usage).
+            Infrastructure wins: integrate once, earn recurring revenue (license + usage + modules).
           </p>
           <p class="muted langhide" data-lang="tr">
-            Killer cümle: Kazananlar altyapı sağlayıcılarıdır. Bir kez entegre edilir, tekrarlı gelir üretir (lisans + kullanım).
+            Altyapı kazandırır: bir kez entegre ol, tekrarlı gelir üret (lisans + kullanım + modüller).
           </p>
         </div>
       </div>
@@ -297,6 +317,7 @@
             <p class="sub langhide" data-lang="tr">Net ayrım: şirket vs ürün vs genişleme.</p>
           </div>
         </div>
+
         <div class="bd">
           <div class="riskBox">
             <div class="kv">
@@ -310,24 +331,26 @@
 
           <h3 class="secTitle" data-lang="en">Initial 3-Branch Plan</h3>
           <h3 class="secTitle langhide" data-lang="tr">İlk 3 Dal Planı</h3>
+
           <ul data-lang="en">
-            <li><b>Project 1:</b> RiskLens Core — Invoice fraud + transaction risk scoring</li>
-            <li><b>Project 2:</b> FinTech SME Layer — Distribution platform + integrations</li>
-            <li><b>Project 3:</b> Risk Engine Expansion — Control panels (Compliance/Cyber/Crypto/Portfolio)</li>
+            <li><b>Branch 1:</b> RiskLens Core — Invoice fraud + transaction risk scoring</li>
+            <li><b>Branch 2:</b> FinTech SME Layer — Distribution platform + integrations</li>
+            <li><b>Branch 3:</b> Risk Engine Expansion — Compliance/Cyber/Crypto/Portfolio panels</li>
           </ul>
+
           <ul class="langhide" data-lang="tr">
-            <li><b>Proje 1:</b> RiskLens Çekirdek — Fatura sahteciliği + işlem risk skoru</li>
-            <li><b>Proje 2:</b> FinTech SME Katmanı — Dağıtım platformu + entegrasyon</li>
-            <li><b>Proje 3:</b> Risk Motoru Genişleme — Kontrol panelleri (Uyum/Siber/Kripto/Portföy)</li>
+            <li><b>Dal 1:</b> RiskLens Çekirdek — Fatura sahteciliği + işlem risk skoru</li>
+            <li><b>Dal 2:</b> FinTech SME Katmanı — Dağıtım platformu + entegrasyon</li>
+            <li><b>Dal 3:</b> Risk Motoru Genişleme — Uyum/Siber/Kripto/Portföy panelleri</li>
           </ul>
 
           <div class="hr"></div>
 
           <p class="muted" data-lang="en">
-            Investors like modular infrastructure: one core engine, multiple upsell modules.
+            Modular infrastructure: one core engine, multiple upsell modules, expanding revenue over time.
           </p>
           <p class="muted langhide" data-lang="tr">
-            Yatırımcılar modüler altyapıyı sever: tek çekirdek motor, çoklu upsell modüller.
+            Modüler altyapı: tek çekirdek motor, çoklu upsell modüller, zamanla büyüyen gelir.
           </p>
         </div>
       </div>
@@ -337,10 +360,10 @@
     <div class="card" style="margin-top:14px;">
       <div class="hd">
         <div>
-          <h2 class="secTitle" style="margin:0" data-lang="en">Live Risk Score Simulation</h2>
-          <h2 class="secTitle langhide" style="margin:0" data-lang="tr">Canlı Risk Skoru Simülasyonu</h2>
-          <p class="sub" data-lang="en">Investor demo simulation — real scoring is produced by the RiskLens engine during pilots.</p>
-          <p class="sub langhide" data-lang="tr">Yatırımcı demo simülasyonu — gerçek skorlar pilotlarda RiskLens motoru tarafından üretilir.</p>
+          <h2 class="secTitle" style="margin:0" data-lang="en">Risk Score Simulation</h2>
+          <h2 class="secTitle langhide" style="margin:0" data-lang="tr">Risk Skoru Simülasyonu</h2>
+          <p class="sub" data-lang="en">Investor demo simulation — real scoring is generated in pilots.</p>
+          <p class="sub langhide" data-lang="tr">Yatırımcı demo simülasyonu — gerçek skorlar pilotlarda üretilir.</p>
         </div>
         <button class="btn" id="runExampleBtn">Run Another Example</button>
       </div>
@@ -373,12 +396,14 @@
           <div class="riskBox">
             <h3 class="secTitle" data-lang="en">Signals</h3>
             <h3 class="secTitle langhide" data-lang="tr">Sinyaller</h3>
-            <ul id="signalsList">
+
+            <ul id="signalsList" data-lang="en">
               <li>No fraud signals detected</li>
               <li>Verified business identity</li>
               <li>Invoice structure valid</li>
               <li>Low anomaly score</li>
             </ul>
+
             <ul class="langhide" id="signalsListTr" data-lang="tr">
               <li>Sahtecilik sinyali yok</li>
               <li>Firma kimliği doğrulandı</li>
@@ -389,7 +414,7 @@
             <div class="hr"></div>
 
             <p class="muted" data-lang="en">
-              Decision: Proceed to finance decision (bank/fund decides). RiskLens only provides intelligence.
+              Decision: Proceed to finance decision (bank/fund decides). RiskLens provides intelligence only.
             </p>
             <p class="muted langhide" data-lang="tr">
               Karar: Finansman kararına geç (banka/fon karar verir). RiskLens sadece zekâ sağlar.
@@ -408,68 +433,12 @@
       <div class="bd">
         <p data-lang="en">
           RiskLens is a pure infrastructure and decision-support layer. It does <b>not</b> lend, does <b>not</b> finance, and does <b>not</b> charge interest.
-          This enables Shariah-friendly risk intelligence used by participation banks and Islamic finance institutions.
+          This enables Shariah-friendly risk intelligence for participation banks and Islamic finance institutions.
         </p>
         <p class="langhide" data-lang="tr">
           RiskLens saf altyapı ve karar destek katmanıdır. Kredi vermez, finansman sağlamaz, faiz üretmez.
           Bu sayede katılım bankaları ve İslami finans kurumları için uyumlu risk zekâsı sağlar.
         </p>
-        <p class="muted" data-lang="en">
-          Key point: RiskLens only informs. Financing is executed by regulated institutions with compliant products.
-        </p>
-        <p class="muted langhide" data-lang="tr">
-          Kritik nokta: RiskLens sadece bilgilendirir. Finansman, lisanslı kurumların uyumlu ürünleriyle uygulanır.
-        </p>
-      </div>
-    </div>
-
-    <!-- PROJECTS -->
-    <div class="card" style="margin-top:14px;">
-      <div class="hd">
-        <h2 class="secTitle" style="margin:0" data-lang="en">Projects Under Zentra (Clear & Modular)</h2>
-        <h2 class="secTitle langhide" style="margin:0" data-lang="tr">Zentra Altındaki Projeler (Net & Modüler)</h2>
-      </div>
-      <div class="bd">
-        <div class="split">
-          <div class="kpi">
-            <div class="l" data-lang="en">Project 1 — RiskLens Core</div>
-            <div class="l langhide" data-lang="tr">Proje 1 — RiskLens Çekirdek</div>
-            <div class="v" data-lang="en">Invoice fraud + transaction risk scoring</div>
-            <div class="v langhide" data-lang="tr">Fatura sahteciliği + işlem risk skoru</div>
-            <p class="muted" data-lang="en">Integrated once, paid recurring (license + API).</p>
-            <p class="muted langhide" data-lang="tr">Bir kez entegre edilir, tekrarlı gelir (lisans + API).</p>
-          </div>
-
-          <div class="kpi">
-            <div class="l" data-lang="en">Project 2 — FinTech SME Layer</div>
-            <div class="l langhide" data-lang="tr">Proje 2 — FinTech SME Katmanı</div>
-            <div class="v" data-lang="en">Distribution platform + partner integrations</div>
-            <div class="v langhide" data-lang="tr">Dağıtım platformu + partner entegrasyonları</div>
-            <p class="muted" data-lang="en">Adoption accelerator: banks, factoring, funds, marketplaces.</p>
-            <p class="muted langhide" data-lang="tr">Benimsenme çarpanı: bankalar, faktoring, fonlar, pazar yerleri.</p>
-          </div>
-        </div>
-
-        <div class="hr"></div>
-
-        <div class="kpi">
-          <div class="l" data-lang="en">Project 3 — Risk Engine Expansion</div>
-          <div class="l langhide" data-lang="tr">Proje 3 — Risk Motoru Genişleme</div>
-          <div class="v" data-lang="en">Each new control panel = new revenue line</div>
-          <div class="v langhide" data-lang="tr">Her yeni kontrol paneli = yeni gelir kalemi</div>
-          <ul data-lang="en">
-            <li>Compliance dashboards</li>
-            <li>Cyber risk intelligence</li>
-            <li>Crypto transaction risk panels</li>
-            <li>Portfolio early-warning systems</li>
-          </ul>
-          <ul class="langhide" data-lang="tr">
-            <li>Uyum panelleri</li>
-            <li>Siber risk zekâsı</li>
-            <li>Kripto işlem risk panelleri</li>
-            <li>Portföy erken uyarı sistemleri</li>
-          </ul>
-        </div>
       </div>
     </div>
 
@@ -477,12 +446,13 @@
     <div class="card" style="margin-top:14px;">
       <div class="hd">
         <div>
-          <h2 class="secTitle" style="margin:0" data-lang="en">Embedded Investor PDF (Drive)</h2>
-          <h2 class="secTitle langhide" style="margin:0" data-lang="tr">Gömülü Yatırımcı PDF (Drive)</h2>
+          <h2 class="secTitle" style="margin:0" data-lang="en">Pitch PDF (Drive)</h2>
+          <h2 class="secTitle langhide" style="margin:0" data-lang="tr">Pitch PDF (Drive)</h2>
           <p class="sub" data-lang="en">If the PDF does not render on some devices, use “Open PDF”.</p>
           <p class="sub langhide" data-lang="tr">PDF bazı cihazlarda görünmezse “Open PDF” ile yeni sekmede aç.</p>
         </div>
-        <a class="btn primary" target="_blank" rel="noopener" href="https://drive.google.com/file/d/1r3UR9HOM-dFqhRztARx_G23vAh0TAXh3/view">Open PDF</a>
+        <a class="btn primary" target="_blank" rel="noopener"
+           href="https://drive.google.com/file/d/1r3UR9HOM-dFqhRztARx_G23vAh0TAXh3/view">Open PDF</a>
       </div>
       <div class="bd">
         <iframe
@@ -524,7 +494,6 @@
         }
       });
       localStorage.setItem('zentra_lang', lang);
-      // Update button styling
       btnEN.classList.toggle('primary', lang === 'en');
       btnTR.classList.toggle('primary', lang === 'tr');
     }
@@ -614,11 +583,5 @@
 
     renderExample(idx);
   </script>
-
-  <!--
-    IMPORTANT:
-    Replace placeholders below automatically (already filled in this final output).
-    If you ever copy this template elsewhere, ensure base64 remains intact.
-  -->
 </body>
 </html>
